# OS

./: README.md
Lab2/: CMakeLists.txt  Lab2  child
Lab2/include/: library.h  utils.h
Lab2/src/: child.c  parent.c  utils.c
kp/doc/: main.tex
kp/src/: C.cpp
lab1/: log.txt  main.tex
lab2/: CMakeLists.txt  Makefile  main.c  test.txt
lab2/.cmake/api/v1/reply/: cache-v2-c3220282372f227af501.json  cmakeFiles-v1-16607011b981707e9a45.json  codemodel-v2-5fdd9fb5208ba45a6dda.json  index-2023-04-19T12-57-08-0407.json  target-Lab2-bdfc46b9b16552972a10.json  target-child-aa35378de6273c5b8c7a.json
lab2/.gitignore/: CMakeCache.txt  Lab2  child  cmake_install.cmake
lab2/doc/: main.tex
lab2/include/: utils.h
lab2/src/: child.c  parent.c  utils.c
lab3/: CMakeLists.txt  main.c
lab3/doc/: main.tex
lab3/include/: bitonic.h
lab3/src/: bitonic.c
lab4/: CMakeLists.txt  main.c  test.txt
lab4/doc/: main.tex
lab4/include/: library.h
lab4/src/: pc.c
lab5/: CMakeLists.txt  main_dynamic.c  main_static.c
lab5/doc/: main.tex
lab5/include/: func.h
lab5/src/: lib1.c  lib2.c
lab6-8/: CMakeLists.txt  child.cpp
lab6-8/doc/: info.tex  report.tex
lab6-8/doc/code/: Tree.h  client.cpp  main.tex  message.cpp  message.h
lab6-8/include/: ZMQUtils.h
lab6-8/src/: ZMQUtils.cpp  server.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
